# glifrenderer.rlib

./: .gitignore  Cargo.toml  README.md
src/: anchors.rs  constants.rs  glyph.rs  grid.rs  guidelines.rs  lib.rs  string.rs  toggles.rs  viewport.rs
src/points/: calc.rs  mod.rs  names.rs
src/viewport/: mod.rs
