[package]
name = "glifrenderer"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#glifparser = { path = "../glifparser.rlib", features=["skia", "mfek"] }
glifparser = { git = "https://github.com/MFEK/glifparser.rlib", branch = "master", features=["skia", "mfek"] }
skulpin = { git = "https://github.com/MFEK/skulpin" }
skulpin-renderer = {git = "https://github.com/MFEK/skulpin/"}
log = "0.4"
font-kit = "0.10"
derive_more = "0.99"
enum-unitary = "0.4.3"
enum-iterator = "0.7.0"

# Maths helpers
kurbo = "0.8"
flo_curves = "0.6"
num-traits = "0.2"
